# ferrum

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
ferrum-core/: Cargo.toml
ferrum-core/src/: lib.rs
ferrum-core/src/core/: elementary_functions.rs  matrix.rs  mod.rs  vector.rs  views.rs
ferrum-core/src/threading/: mod.rs
ferrum-py/: Cargo.toml
ferrum-py/src/: lib.rs
ferrum-py/src/bindings/: mod.rs  real_matrix.rs
python/ferrum/: __init__.py
src/: lib.rs
src/algorithms/: mod.rs
src/bindings/: mod.rs  real_matrix.rs
src/core/: complex.rs  dual.rs  matrix.rs  mod.rs  real.rs  views.rs
tests/python/: test_import.py
