[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ferrum"
version = "0.1.0"
description = "Computational linear algebra in Rust for Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "maturin>=1.7,<2.0",
    "pytest>=8,<9",
]

[tool.maturin]
python-source = "python"
module-name = "ferrum._ferrum"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
