[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ferrum"
version = "0.1.0"
description = "Computational linear algebra in Rust for Python."
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "maturin>=1.7,<2.0",
    "pytest>=8,<9",
]

[tool.maturin]
manifest-path = "ferrum-py/Cargo.toml"
python-source = "python"
module-name = "ferrum._ferrum"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
